tests/sema/fail/v21_fail_extern_cstr_required.ep
# COMPILE_FAIL: lstrlenA argument 1 expected u64, got str
extern "kernel32.dll" fun lstrlenA(text: u64): i32

fun main(): void {
    let n = lstrlenA("abc")
}
